kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scm-platform
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: production
